--- a/src/app/components/reset-password/reset-password-request/reset-password-request.component.html
+++ b/src/app/components/reset-password/reset-password-request/reset-password-request.component.html
@@ -1,24 +1,16 @@
-<div class="auth-form-container">
-  <form
-    class="auth-form"
-    [formGroup]="resetPasswordRequestForm"
-    (ngSubmit)="onSubmit()"
-  >
-    <h2>Verify Reset Password Token</h2>
-    <!-- Email Field -->
+<div *ngIf="!loading" class="auth-form-container">
+  <form class="auth-form" [formGroup]="resetPasswordRequestForm">
+    <h2>{{ "RESET_PASSWORD.REQUEST.TITLE" | translate }}</h2>
     <div class="form-group">
       <div class="label-link">
-        <label for="email">Enter your email</label>
-        <a (click)="onSendToken()" class="link" *ngIf="tokenSent"
-          >Resend Token</a
-        >
+        <label for="email">
+          {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.EMAIL" | translate }}
+        </label>
+        <a (click)="onSendToken()" *ngIf="tokenSent">
+          {{ "RESET_PASSWORD.REQUEST.RESEND" | translate }}
+        </a>
       </div>
-      <input
-        type="email"
-        id="email"
-        formControlName="email"
-        placeholder="Enter your email address"
-      />
+      <input type="email" id="email" formControlName="email" />
       <div
         class="error-message"
         *ngIf="
@@ -29,27 +21,39 @@
         <small
           *ngIf="resetPasswordRequestForm.get('email')?.errors?.['required']"
         >
-          Email is required.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_REQUIRED"
+              | translate
+                : {
+                    type: ("DASHBOARD.SECTIONS.TABLE_HEADERS.EMAIL" | translate)
+                  }
+          }}
         </small>
-        <small
-          *ngIf="resetPasswordRequestForm.get('email')?.errors?.['email']"
-        >
-          Please enter a valid email. Example: example&#64;domain.com
+        <small *ngIf="resetPasswordRequestForm.get('email')?.errors?.['email']">
+          {{
+            "AUTH.ERROR_MESSAGES.EMAIL_PATTERN"
+              | translate
+                : {
+                    type: ("DASHBOARD.SECTIONS.TABLE_HEADERS.EMAIL" | translate)
+                  }
+          }}
         </small>
       </div>
     </div>
-    <a (click)="onSendToken()" class="btn-submit" *ngIf="!tokenSent">
-      Send Token
-    </a>
-    <!-- token field -->
+    <button
+      (click)="onSendToken()"
+      class="btn-submit"
+      *ngIf="!tokenSent"
+      [disabled]="resetPasswordRequestForm.get('email')?.invalid"
+    >
+      {{ "RESET_PASSWORD.REQUEST.SEND" | translate }}
+    </button>
+
     <div class="form-group" *ngIf="tokenSent">
-      <label for="token">Enter the token</label>
-      <input
-        type="text"
-        id="token"
-        formControlName="token"
-        placeholder="Enter the token sent to your email"
-      />
+      <label for="token">
+        {{ "RESET_PASSWORD.REQUEST.OTP" | translate }}
+      </label>
+      <input type="text" id="token" formControlName="token" />
       <div
         class="error-message"
         *ngIf="
@@ -60,19 +64,27 @@
         <small
           *ngIf="resetPasswordRequestForm.get('token')?.errors?.['required']"
         >
-          Token is required.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_REQUIRED"
+              | translate
+                : {
+                    type: ("RESET_PASSWORD.REQUEST.OTP" | translate)
+                  }
+          }}
         </small>
       </div>
     </div>
 
-    <!-- Submit Button -->
     <button
-      type="submit"
       class="btn-submit"
+      (click)="onSubmit()"
       [disabled]="resetPasswordRequestForm.invalid"
       *ngIf="tokenSent"
     >
-      Verify Token
+      {{ "RESET_PASSWORD.REQUEST.VERIFY" | translate }}
     </button>
   </form>
+</div>
+<div *ngIf="loading" class="spinner-overlay">
+  <div class="spinner"></div>
 </div>
