--- a/src/app/components/reset-password/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password/reset-password.component.html
@@ -4,9 +4,9 @@
     [formGroup]="ResetPasswordForm"
     (ngSubmit)="onSubmit()"
   >
-    <h2>Reset Your Password</h2>
+    <h2>{{ "RESET_PASSWORD.TITLE" | translate }}</h2>
     <div class="form-group">
-      <label for="password">Password</label>
+      <label for="password"> {{ "AUTH.PASSWORD" | translate }} </label>
       <div class="password-container">
         <input
           [type]="showPassword ? 'text' : 'password'"
@@ -30,33 +30,36 @@
         "
       >
         <small *ngIf="ResetPasswordForm.get('password')?.errors?.['required']">
-          Password is required.
+          {{ "PASSWORD_ERRORS.REQUIRED" | translate }}
         </small>
         <small *ngIf="ResetPasswordForm.get('password')?.errors?.['minlength']">
-          Password must be at least 8 characters long.
+          {{ "PASSWORD_ERRORS.MIN_LENGTH" | translate }}
         </small>
         <small *ngIf="ResetPasswordForm.get('password')?.errors?.['pattern']">
-          Password must contain at least 1 uppercase letter, 1 lowercase letter,
-          1 number, and 1 special character.
+          {{ "PASSWORD_ERRORS.PATTERN" | translate }}
         </small>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="confirmPassword">Confirm Password</label>
+      <label for="confirmPassword">
+        {{ "AUTH.CONFIRM_PASSWORD" | translate }}
+      </label>
       <div class="password-container">
         <input
-          [type]="showPassword ? 'text' : 'password'"
+          [type]="showConfirmPassword ? 'text' : 'password'"
           id="confirmPassword"
           formControlName="confirmPassword"
         />
         <button
           type="button"
           class="toggle-password"
-          (click)="togglePasswordVisibility()"
+          (click)="toggleConfirmPasswordVisibility()"
           aria-label="Toggle password visibility"
         >
-          <i [ngClass]="showPassword ? 'fas fa-eye-slash' : 'fas fa-eye'"></i>
+          <i
+            [ngClass]="showConfirmPassword ? 'fas fa-eye-slash' : 'fas fa-eye'"
+          ></i>
         </button>
       </div>
       <div
@@ -69,12 +72,12 @@
         <small
           *ngIf="ResetPasswordForm.get('confirmPassword')?.errors?.['required']"
         >
-          Confirm Password is required.
+          {{ "PASSWORD_ERRORS.REQUIRED" | translate }}
         </small>
         <small
           *ngIf="ResetPasswordForm.get('confirmPassword')?.errors?.['passwordMismatch']"
         >
-          Passwords do not match.
+          {{ "PASSWORD_ERRORS.PASSWORD_MISMATCH" | translate }}
         </small>
       </div>
     </div>
@@ -85,7 +88,10 @@
       class="btn-submit"
       [disabled]="ResetPasswordForm.invalid"
     >
-      Reset Password
+      {{ "RESET_PASSWORD.SUBMIT" | translate }}
     </button>
   </form>
+</div>
+<div *ngIf="loading" class="spinner-overlay">
+  <div class="spinner"></div>
 </div>
