--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,7 +73,6 @@ main {
         border: 1px solid #ddd;
         border-radius: 4px;
         font-size: 1rem;
-        // color: #333;
 
         &:focus {
           outline: none;
@@ -128,16 +127,17 @@ main {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 20px 0 0;
       a {
         margin: 10px 0;
         display: inline-block;
-        color: #0066cc;
+        color: $primary-color;
         font-size: 0.9rem;
         text-decoration: none;
         cursor: pointer;
+        transition: 0.3s;
         &:hover {
           text-decoration: underline;
+          color: $hover-color;
         }
       }
     }
@@ -594,6 +594,17 @@ main {
 }
 
 @media screen and (max-width: 480px) {
+  .auth-form {
+    h2 {
+      font-size: 1rem !important;
+    }
+    p,
+    p > small {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
   .heading {
     font-size: 1.8rem;
   }
@@ -652,10 +663,8 @@ main {
 .toast-container {
   z-index: 1050;
   position: fixed;
-  top: 10%;
-  inset-inline-start: 50%;
   width: fit-content;
-  transform: translateX(-50%);
+  direction: ltr;
 }
 
 // Base Toast Styles
